added new files

--- a/workspace/2022.micro.artifact/notebook/artifact_evaluations.ipynb
+++ b/workspace/2022.micro.artifact/notebook/artifact_evaluations.ipynb
@@ -1019,9 +1019,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "real\t0m2.119s\n",
-      "user\t0m1.641s\n",
-      "sys\t0m0.151s\n"
+      "real\t0m4.303s\n",
+      "user\t0m3.705s\n",
+      "sys\t0m0.230s\n"
      ]
     }
    ],
@@ -1063,9 +1063,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "real\t0m1.388s\n",
-      "user\t0m3.068s\n",
-      "sys\t0m3.867s\n"
+      "real\t0m6.300s\n",
+      "user\t0m8.670s\n",
+      "sys\t0m2.350s\n"
      ]
     }
    ],
@@ -1131,7 +1131,184 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input specs at: ../evaluation_setups/fig12_eyerissv2_pe_setup/\n",
+      "Warning: neither block size nor cluster size specified, set according to specified storage width: block size: 1  cluster-size: 1\n",
+      "Warning: BackingStorage: adjust representation format word bits from 7 to 8 to avoid storage fragmentation.\n",
+      "Warning: weight_spad: adjust representation format word bits from 7 to 8 to avoid storage fragmentation.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Utilization = 1.00 | pJ/Algorithmic-Compute =    1.190 | pJ/Compute =    3.135\n",
+      "Warning: neither block size nor cluster size specified, set according to specified storage width: block size: 1  cluster-size: 1\n",
+      "Warning: BackingStorage: adjust representation format word bits from 7 to 8 to avoid storage fragmentation.\n",
+      "Warning: weight_spad: adjust representation format word bits from 7 to 8 to avoid storage fragmentation.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Utilization = 1.00 | pJ/Algorithmic-Compute =    0.658 | pJ/Compute =    3.783\n",
+      "Warning: neither block size nor cluster size specified, set according to specified storage width: block size: 1  cluster-size: 1\n",
+      "Warning: BackingStorage: adjust representation format word bits from 7 to 8 to avoid storage fragmentation.\n",
+      "Warning: weight_spad: adjust representation format word bits from 7 to 8 to avoid storage fragmentation.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Utilization = 1.00 | pJ/Algorithmic-Compute =    1.136 | pJ/Compute =    2.958\n",
+      "Warning: neither block size nor cluster size specified, set according to specified storage width: block size: 1  cluster-size: 1\n",
+      "Warning: BackingStorage: adjust representation format word bits from 7 to 8 to avoid storage fragmentation.\n",
+      "Warning: weight_spad: adjust representation format word bits from 7 to 8 to avoid storage fragmentation.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Utilization = 1.00 | pJ/Algorithmic-Compute =    1.429 | pJ/Compute =    2.689\n",
+      "Warning: neither block size nor cluster size specified, set according to specified storage width: block size: 1  cluster-size: 1\n",
+      "Warning: BackingStorage: adjust representation format word bits from 7 to 8 to avoid storage fragmentation.\n",
+      "Warning: weight_spad: adjust representation format word bits from 7 to 8 to avoid storage fragmentation.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Utilization = 1.00 | pJ/Algorithmic-Compute =    1.028 | pJ/Compute =    3.064\n",
+      "Warning: neither block size nor cluster size specified, set according to specified storage width: block size: 1  cluster-size: 1\n",
+      "Warning: BackingStorage: adjust representation format word bits from 7 to 8 to avoid storage fragmentation.\n",
+      "Warning: weight_spad: adjust representation format word bits from 7 to 8 to avoid storage fragmentation.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Utilization = 1.00 | pJ/Algorithmic-Compute =    1.294 | pJ/Compute =    2.926\n",
+      "Warning: neither block size nor cluster size specified, set according to specified storage width: block size: 1  cluster-size: 1\n",
+      "Warning: BackingStorage: adjust representation format word bits from 7 to 8 to avoid storage fragmentation.\n",
+      "Warning: weight_spad: adjust representation format word bits from 7 to 8 to avoid storage fragmentation.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Utilization = 1.00 | pJ/Algorithmic-Compute =    1.248 | pJ/Compute =    2.922\n",
+      "Warning: neither block size nor cluster size specified, set according to specified storage width: block size: 1  cluster-size: 1\n",
+      "Warning: BackingStorage: adjust representation format word bits from 7 to 8 to avoid storage fragmentation.\n",
+      "Warning: weight_spad: adjust representation format word bits from 7 to 8 to avoid storage fragmentation.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n",
+      "WARNING: Interpreting 0 to mean full problem dimension instead of residue.\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "cd ../evaluation_setups/fig12_eyerissv2_pe_setup/scripts\n",
