--- a/workspace/2022.micro.artifact/notebook/artifact_evaluations.ipynb
+++ b/workspace/2022.micro.artifact/notebook/artifact_evaluations.ipynb
@@ -1490,9 +1490,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input specs at: ../evaluation_setups/fig13_dstc_setup/\n",
+      "Utilization = 0.91 | pJ/Algorithmic-Compute =    8.969 | pJ/Compute =    8.969\n",
+      "Utilization = 0.75 | pJ/Algorithmic-Compute =    3.815 | pJ/Compute =    9.539\n",
+      "Utilization = 0.90 | pJ/Algorithmic-Compute =    8.335 | pJ/Compute =    9.261\n",
+      "Utilization = 0.68 | pJ/Algorithmic-Compute =    3.543 | pJ/Compute =    9.842\n",
+      "Utilization = 0.88 | pJ/Algorithmic-Compute =    7.055 | pJ/Compute =   10.078\n",
+      "Utilization = 0.66 | pJ/Algorithmic-Compute =    2.993 | pJ/Compute =   10.690\n",
+      "Utilization = 0.83 | pJ/Algorithmic-Compute =    5.775 | pJ/Compute =   11.550\n",
+      "Utilization = 0.62 | pJ/Algorithmic-Compute =    2.444 | pJ/Compute =   12.218\n",
+      "Utilization = 0.74 | pJ/Algorithmic-Compute =    4.494 | pJ/Compute =   14.981\n",
+      "Utilization = 0.56 | pJ/Algorithmic-Compute =    1.893 | pJ/Compute =   15.776\n",
+      "/home/workspace/2022.micro.artifact/evaluation_setups/fig13_dstc_setup/scripts/../input_specs/ERT.yaml\n",
+      "\tRunning test:  B_1.0-A_1.0\n",
+      "\tRunning test:  B_0.4-A_1.0\n",
+      "\tRunning test:  B_1.0-A_0.9\n",
+      "\tRunning test:  B_0.4-A_0.9\n",
+      "\tRunning test:  B_1.0-A_0.7\n",
+      "\tRunning test:  B_0.4-A_0.7\n",
+      "\tRunning test:  B_1.0-A_0.5\n",
+      "\tRunning test:  B_0.4-A_0.5\n",
+      "\tRunning test:  B_1.0-A_0.3\n",
+      "\tRunning test:  B_0.4-A_0.3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "real\t1m54.131s\n",
+      "user\t1m54.389s\n",
+      "sys\t0m2.073s\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "cd ../evaluation_setups/fig13_dstc_setup/scripts\n",
