refactor for clarity

--- a/workspace/2022.micro.artifact/evaluation_setups/unstructured_sparse_eval/scripts/model_sparsity.ipynb
+++ b/workspace/2022.micro.artifact/evaluation_setups/unstructured_sparse_eval/scripts/model_sparsity.ipynb
@@ -30,8 +30,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Helper Functions\n",
-    "\n",
     "def calculate_density(tensor):\n",
     "    if tensor.numel() == 0:\n",
     "        return 0.0\n",
@@ -114,7 +112,6 @@
     }
    ],
    "source": [
-    "## Model Analysis Loop\n",
     "device = torch.device(\"cpu\")\n",
     "\n",
     "results = {}\n",
@@ -131,17 +128,17 @@
     "\n",
     "    if model_name == 'alexnet':\n",
     "        first_conv_layer = model.features[0]\n",
-    "        activation_layer = model.features[1] # ReLU follows Conv\n",
+    "        activation_layer = model.features[1]\n",
     "        C = 3\n",
     "    elif model_name == 'resnet50':\n",
     "        first_conv_layer = model.conv1\n",
-    "        batch_norm_layer = model.bn1 # BN follows Conv\n",
-    "        activation_layer = model.relu # ReLU follows BN\n",
+    "        batch_norm_layer = model.bn1\n",
+    "        activation_layer = model.relu\n",
     "        C = first_conv_layer.in_channels\n",
     "    elif model_name == 'mobilenet_v2':\n",
     "        first_conv_layer = model.features[0][0]\n",
-    "        batch_norm_layer = model.features[0][1] # BN follows Conv\n",
-    "        activation_layer = model.features[0][2] # ReLU6 follows BN\n",
+    "        batch_norm_layer = model.features[0][1]\n",
+    "        activation_layer = model.features[0][2]\n",
     "        C = first_conv_layer.in_channels\n",
     "    else:\n",
     "        print(f\"Don't know how to find the layers for {model_name}. Skipping.\")\n",
@@ -172,13 +169,13 @@
     "    output_activations = None\n",
     "    with torch.no_grad():\n",
     "        x = first_conv_layer(dummy_input)\n",
-    "        if batch_norm_layer: # Apply BN if it exists (ResNet, MobileNet)\n",
+    "        if batch_norm_layer:\n",
     "             x = batch_norm_layer(x)\n",
-    "        output_activations = activation_layer(x) # Apply Activation\n",
+    "        output_activations = activation_layer(x)\n",
     "\n",
     "    input_density = calculate_density(dummy_input)\n",
     "    weight_density = calculate_density(weights)\n",
-    "    output_density = calculate_density(output_activations) # Density after activation\n",
+    "    output_density = calculate_density(output_activations)\n",
     "\n",
     "    Q, P = calculate_output_dim((input_height, input_width), kernel_size, stride, padding, dilation)\n",
     "\n",
@@ -218,13 +215,6 @@
     "    print(f\"    Output (Post-Activation):  {layer_info['Output Activation Density (Post-Activation)']}\")\n",
     "    print(\"-\" * 30)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
